Add Dark Gray theme option

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                  <option value="dark">Dark</option>
                  <option value="light">Light</option>
                  <option value="gray">Gray</option>
+                 <option value="darkgray">Dark Gray</option>
                  <option value="sepia">Sepia</option>
                  <option value="green">Green Screen</option>
                  <option value="blue">Blue Light Filter</option>
