Replace themes after Sepia with better options: Solarized Light/Dark, Warm, Midnight, improved High Contrast

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                  <option value="gray">Gray</option>
                  <option value="darkgray">Dark Gray</option>
                  <option value="sepia">Sepia</option>
-                 <option value="green">Green Screen</option>
-                 <option value="blue">Blue Light Filter</option>
-                 <option value="amber">Amber</option>
-                 <option value="paper">Paper</option>
+                 <option value="solarizedlight">Solarized Light</option>
+                 <option value="solarizeddark">Solarized Dark</option>
+                 <option value="warm">Warm</option>
+                 <option value="midnight">Midnight</option>
                  <option value="highcontrast">High Contrast</option>
                </select>
              </div>
